# edsnlp

./: changelog.md  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
docs/pipelines/: index.md
docs/pipelines/core/: contextual-matcher.md  matcher.md
docs/pipelines/misc/: measurements.md
edsnlp/: __init__.py  factories.py  patch_spacy.py
edsnlp/connectors/: brat.py  omop.py
edsnlp/core/: component.py  pipeline.py  registry.py
edsnlp/layers/: crf.py  text_cnn.py
edsnlp/matchers/: simstring.py
edsnlp/matchers/utils/: text.py
edsnlp/models/: span_multi_classifier.py
edsnlp/pipelines/: factories.py
edsnlp/pipelines/core/context/: context.py  factory.py
edsnlp/pipelines/core/contextual_matcher/: contextual_matcher.py  factory.py
edsnlp/pipelines/core/endlines/: endlines.py  endlinesmodel.py  factory.py
edsnlp/pipelines/core/matcher/: factory.py  matcher.py
edsnlp/pipelines/core/normalizer/: factory.py  normalizer.py
edsnlp/pipelines/core/normalizer/accents/: factory.py
edsnlp/pipelines/core/normalizer/pollution/: factory.py  pollution.py
edsnlp/pipelines/core/normalizer/quotes/: factory.py
edsnlp/pipelines/core/normalizer/remove_lowercase/: factory.py  remove_lowercase.py
edsnlp/pipelines/core/sentences/: factory.py  sentences.py
edsnlp/pipelines/core/terminology/: factory.py  terminology.py
edsnlp/pipelines/misc/consultation_dates/: consultation_dates.py  factory.py
edsnlp/pipelines/misc/dates/: dates.py  factory.py
edsnlp/pipelines/misc/measurements/: factory.py  measurements.py
edsnlp/pipelines/misc/reason/: factory.py  reason.py
edsnlp/pipelines/misc/sections/: factory.py  sections.py
edsnlp/pipelines/ner/adicap/: factory.py
edsnlp/pipelines/ner/cim10/: factory.py
edsnlp/pipelines/ner/covid/: factory.py
edsnlp/pipelines/ner/drugs/: factory.py
edsnlp/pipelines/ner/scores/: base_score.py  factory.py
edsnlp/pipelines/ner/scores/charlson/: factory.py
edsnlp/pipelines/ner/scores/elstonellis/: factory.py
edsnlp/pipelines/ner/scores/emergency/ccmu/: factory.py
edsnlp/pipelines/ner/scores/emergency/gemsa/: factory.py
edsnlp/pipelines/ner/scores/emergency/priority/: factory.py
edsnlp/pipelines/ner/scores/sofa/: factory.py  sofa.py
edsnlp/pipelines/ner/scores/tnm/: factory.py  tnm.py
edsnlp/pipelines/ner/umls/: factory.py
edsnlp/pipelines/qualifiers/: base.py
edsnlp/pipelines/qualifiers/family/: factory.py  family.py
edsnlp/pipelines/qualifiers/history/: factory.py  history.py
edsnlp/pipelines/qualifiers/hypothesis/: factory.py  hypothesis.py
edsnlp/pipelines/qualifiers/negation/: factory.py  negation.py
edsnlp/pipelines/qualifiers/reported_speech/: factory.py  reported_speech.py
edsnlp/pipelines/trainable/: nested_ner.py
edsnlp/pipelines/trainable/embeddings/: text_cnn.py  transformer.py  typing.py
edsnlp/pipelines/trainable/ner/: ner.py
edsnlp/pipelines/trainable/span_qualifier/: span_qualifier.py
edsnlp/processing/: distributed.py  parallel.py  simple.py  wrapper.py
edsnlp/utils/: deprecation.py  filter.py  training.py
edsnlp/viz/: quick_examples.py
tests/: conftest.py
tests/connectors/: test_brat.py
tests/core/: test_pipeline.py
tests/pipelines/core/: test_matcher.py
tests/pipelines/misc/: test_dates.py  test_measurements.py
tests/pipelines/ner/: test_umls.py
tests/training/: config.cfg  test_train.py
